--- a/.github/workflows/install-and-push.yaml
+++ b/.github/workflows/install-and-push.yaml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0  # Fetch all history for all branches and tags
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -34,7 +36,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
 
-    - name: Check PWS remote and push
+    - name: Check PWS remote, push, and handle branch
       run: |
         PWS_URL="http://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id/isa.citra/elf"
         if git remote | grep -q "^pws$"; then
@@ -44,8 +46,19 @@ jobs:
           echo "PWS remote does not exist. Adding it."
           git remote add pws "$PWS_URL"
         fi
+        
         git add .
         git commit -m "Add installed dependencies and custom wheels" || echo "No changes to commit"
-        git push pws master
+        
+        # Check if master branch exists locally
+        if git show-ref --verify --quiet refs/heads/master; then
+          echo "Master branch exists locally"
+        else
+          echo "Creating master branch"
+          git branch master
+        fi
+        
+        # Push to master branch
+        git push pws HEAD:master
       env:
         GIT_TERMINAL_PROMPT: 0
