--- a/.github/workflows/install-and-push.yaml
+++ b/.github/workflows/install-and-push.yaml
@@ -38,11 +38,8 @@ jobs:
 
     - name: Check PWS remote, push, and handle branch
       run: |
-        # Set up credential helper
-        git config --global credential.helper store
-        echo "http://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id" > ~/.git-credentials
 
-        PWS_URL="http://isa.citra:_8AmVGOjXGjNfZWm6_G751B6qAgCW7jF@pbp.cs.ui.ac.id/isa.citra/elf"
+        PWS_URL="http://isa_citra:_8AmVGOjXGjNfZWm6_G751B6qAgCW7jF@pbp.cs.ui.ac.id/isa.citra/elf"
         if git remote | grep -q "^pws$"; then
           echo "PWS remote exists. Updating URL."
           git remote set-url pws "$PWS_URL"
