--- a/.github/workflows/install-and-push.yaml
+++ b/.github/workflows/install-and-push.yaml
@@ -33,8 +33,8 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
+        git config --global user.name "${{ secrets.GH_USERNAME }}"
+        git config --global user.email "${{secrets.GH_EMAIL}}"
 
         - name: Check PWS remote, push, and handle branch
         run: |
