--- a/.github/workflows/install-and-push.yaml
+++ b/.github/workflows/install-and-push.yaml
@@ -21,9 +21,7 @@ jobs:
         python-version: '3.9'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: python -m pip install --upgrade pip
 
     - name: Create custom-wheels directory
       run: mkdir -p ./custom-wheels
@@ -36,35 +34,34 @@ jobs:
         git config --global user.name "${{ secrets.GH_USERNAME }}"
         git config --global user.email "${{secrets.GH_EMAIL}}"
 
-        - name: Check PWS remote, push, and handle branch
-        run: |
-          # Set up credential helper
-          git config --global credential.helper store
-          echo "http://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id" > ~/.git-credentials
-          cat ~/.git-credentials
-          PWS_URL="http://pbp.cs.ui.ac.id/isa.citra/elf"
-          if git remote | grep -q "^pws$"; then
-            echo "PWS remote exists. Updating URL."
-            git remote set-url pws "$PWS_URL"
-          else
-            echo "PWS remote does not exist. Adding it."
-            git remote add pws "$PWS_URL"
-          fi
-          
-          git add .
-          git commit -m "Add installed dependencies and custom wheels" || echo "No changes to commit"
-          
-          # Check if master branch exists locally
-          if git show-ref --verify --quiet refs/heads/master; then
-            echo "Master branch exists locally"
-          else
-            echo "Creating master branch"
-            git branch master
-          fi
-          
-          # Push to master branch
-          git push pws master || echo "Push failed"
-      
+    - name: Check PWS remote, push, and handle branch
+      run: |
+        # Set up credential helper
+        git config --global credential.helper store
+        echo "http://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id" > ~/.git-credentials
+        cat ~/.git-credentials
+        PWS_URL="http://pbp.cs.ui.ac.id/isa.citra/elf"
+        if git remote | grep -q "^pws$"; then
+          echo "PWS remote exists. Updating URL."
+          git remote set-url pws "$PWS_URL"
+        else
+          echo "PWS remote does not exist. Adding it."
+          git remote add pws "$PWS_URL"
+        fi
+        
+        git add .
+        git commit -m "Add installed dependencies and custom wheels" || echo "No changes to commit"
+        
+        # Check if master branch exists locally
+        if git show-ref --verify --quiet refs/heads/master; then
+          echo "Master branch exists locally"
+        else
+          echo "Creating master branch"
+          git branch master
+        fi
+        
+        # Push to master branch
+        git push pws master || echo "Push failed"
 
     - name: Clean up credentials
       if: always()
