--- a/.github/workflows/install-and-push.yaml
+++ b/.github/workflows/install-and-push.yaml
@@ -34,34 +34,53 @@ jobs:
         git config --global user.name "${{ secrets.GH_USERNAME }}"
         git config --global user.email "${{secrets.GH_EMAIL}}"
 
-    - name: Check PWS remote, push, and handle branch
-      run: |
-        # Set up credential helper
-        git config --global credential.helper store
-        echo "https://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id" > ~/.git-credentials
-        PWS_URL="${{secrets.PWS_URL}}"
-        if git remote | grep -q "^pws$"; then
-          echo "PWS remote exists. Updating URL."
-          git remote set-url pws "$PWS_URL"
-        else
-          echo "PWS remote does not exist. Adding it."
-          git remote add pws "$PWS_URL"
-        fi
-        
-        git add .
-        git commit -m "Add installed dependencies and custom wheels" || echo "No changes to commit"
-        
-        # Check if master branch exists locally
-        if git show-ref --verify --quiet refs/heads/master; then
-          echo "Master branch exists locally"
-        else
-          echo "Creating master branch"
-          git branch master
-        fi
-        
-        # Push to master branch and capture the output
-        push_output=$(git push pws master 2>&1) || { echo "Push failed with output: $push_output"; exit 1; }
-        echo "Push successful with output: $push_output"
+        - name: Check PWS remote, pull, merge, and push
+        run: |
+          # Set up credential helper
+          git config --global credential.helper store
+          echo "https://${{ secrets.PWS_USERNAME }}:${{ secrets.PWS_PASSWORD }}@pbp.cs.ui.ac.id" > ~/.git-credentials
+          PWS_URL="${{secrets.PWS_URL}}"
+          if git remote | grep -q "^pws$"; then
+            echo "PWS remote exists. Updating URL."
+            git remote set-url pws "$PWS_URL"
+          else
+            echo "PWS remote does not exist. Adding it."
+            git remote add pws "$PWS_URL"
+          fi
+          
+          git add .
+          git commit -m "Add installed dependencies and custom wheels" || echo "No changes to commit"
+          
+          # Check if master branch exists locally
+          if ! git show-ref --verify --quiet refs/heads/master; then
+            echo "Creating master branch"
+            git branch master
+          fi
+          
+          # Switch to master branch
+          git checkout master
+          
+          # Try to pull and merge
+          if ! git pull pws master --no-rebase; then
+            echo "Pull failed, trying to merge"
+            if ! git merge origin/main -m "Merge main into master"; then
+              echo "Merge failed. Attempting to resolve conflicts automatically."
+              git config merge.ours.driver true
+              if ! git merge -X ours origin/main -m "Merge main into master (ours strategy)"; then
+                echo "Error: Unable to automatically resolve conflicts. Manual intervention required."
+                exit 1
+              fi
+            fi
+          fi
+          
+          # Push to master branch and capture the output
+          push_output=$(git push pws master 2>&1)
+          if [[ $? -ne 0 ]]; then
+            echo "Push failed with output: $push_output"
+            echo "Error: Unable to push changes. Please check the error message above and resolve any conflicts manually."
+            exit 1
+          fi
+          echo "Push successful with output: $push_output"
 
     - name: Clean up credentials
       if: always()
